# Study-Quran-Obsidian

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: lint.yml
quran_obsidian/: __init__.py  cli.py  data.py  generator.py  surah_metadata.json
